# CCometixLine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh.md  SEGMENT_OPTIONS_GUIDE.md  config.toml.example  models.toml
.github/workflows/: release.yml
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  lib.rs  main.rs  updater.rs
src/config/: defaults.rs  loader.rs  mod.rs  models.rs  types.rs
src/core/: statusline.rs
src/core/segments/: cost.rs  directory.rs  git.rs  mod.rs  model.rs  output_style.rs  session.rs  update.rs  usage.rs
src/themes/: powerline_importer.rs
src/ui/: app.rs  main_menu.rs  mod.rs
src/ui/components/: help.rs  icon_selector.rs  preview.rs  segment_list.rs  settings.rs
src/ui/themes/: mod.rs  presets.rs  theme_cometix.rs  theme_default.rs  theme_gruvbox.rs  theme_minimal.rs  theme_nord.rs  theme_powerline_dark.rs  theme_powerline_light.rs  theme_powerline_rose_pine.rs  theme_powerline_tokyo_night.rs
src/utils/: claude_code_patcher.rs  mod.rs
